--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Unfx Proxy Checker</title>
+        <title>UNFX Proxy Checker</title>
     </head>
     <body>
         <div id="root"></div>
